fixed awkward gap in headers and added adin's animation

--- a/assets/css/writeup.css
+++ b/assets/css/writeup.css
@@ -21,3 +21,8 @@
   text-align: center;
   font-size: 3vh;
 }
+
+h2, h3, h4, h5, h6{
+  margin-bottom: 0px;
+
+}
